# ralfpack

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.rs
.github/workflows/: build-linux.yml  build-osx.yml  release.yml  unit-tests.yml
doc/: ralfpack.md  ralfpack_convert.md  ralfpack_create.md  ralfpack_info.md  ralfpack_info_config.md  ralfpack_info_signing.md  ralfpack_sign.md  ralfpack_verify.md
src/: convert_cmd.rs  create_cmd.rs  info_cmd.rs  main.rs  package.rs  package_config.rs  package_content.rs  package_reader.rs  package_signature.rs  sign_cmd.rs  signing_config.rs  utils.rs  verify_cmd.rs
src/dmverity/: dmverity_gen.rs
src/entos/: config_xml.rs  configs.rs  convertors.rs  media_types.rs  permissions.rs  widget.rs
src/entos/convertors/: age_policy.rs  age_rating.rs  audio.rs  catalogue_id.rs  common.rs  dial.rs  display.rs  fkps.rs  input_handling.rs  legacy_drm.rs  lifecycle.rs  log_levels.rs  low_power.rs  marketplace_intercept.rs  mediarite.rs  memory.rs  multicast.rs  network.rs  partner_id.rs  pin_management.rs  prelaunch.rs  storage.rs  window.rs
src/erofs/: erofs_image.rs  erofs_sys.rs  wrapper.h
src/schemas/: package_config_schema.json
testdata/: all_config.xml  package_config.json  runtime_config.xml  webapp_config.xml
testdata/dmverity/: large.img  large.img.append.hashes  large.img.hashes  medium.img  medium.img.append.hashes  medium.img.hashes  small.img  small.img.append.hashes  small.img.hashes
