[package]
name = "ralfpack"
version = "0.5.0"
edition = "2024"
build = "build.rs"
license = "Apache-2.0"
authors = ["Ben Gray <ben.gray@sky.uk>", "Piotr Serafin <piotr.serafin@consult.red>"]
repository = "https://github.com/rdkcentral/ralfpack"

[lints.rust]
non_shorthand_field_patterns = "allow"

[dependencies]
clap = { version = "4.5.37", features = ["derive","wrap_help"] }
color-print = "0.3.7"
fs_extra = "1.3.0"
glob = "0.3.2"
libc = "0.2"
jsonschema = { version = "0.30.0", default-features = false }
log = "0.4.22"
colog = "1.3.0"
infer = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serde", "serialize", "overlapped-lists"] }
tar = "0.4.44"
oci-spec = "0.8.1"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.140"
uuid = { version = "1.16", features = ["v4"] }
zip = "5.1.1"
tempfile = "3.19.1"
flate2 = "1.1.1"
zstd = "0.13.3"
xz2 = "0.1.7"
hex = "0.4.3"
walkdir = "2.5.0"
positioned-io = "0.3.4"

libz-sys = { version = "1.1.12", default-features = false, features = ["static", "libc"] }
zstd-sys = { version = "2.0.9", default-features = false, features = ["legacy", "zdict_builder"] }
lz4-sys = { version = "1.9.4" }


[build-dependencies]
built = "0.7"
autotools = "0.2"
bindgen = "0.71.1"
cc = "1.2"
flate2 = "1.1"
tar = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

[profile.release]
lto = true
opt-level = "z"
strip = true
